# Spreadsheet

./: CMakeLists.txt  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Model.cpp  Model.h  OperationButton.cpp  OperationButton.h  Result.cpp  Result.h  Sum.cpp  Sum.h  ValuesManagement.cpp  ValuesManagement.h  Window.cpp  Window.h  main.cpp
test/: CMakeLists.txt  MaxTests.cpp  MeanTests.cpp  MinTests.cpp  ModelTests.cpp  ResultTests.cpp  RunAllTests.cpp  SumTests.cpp
