cmake_minimum_required(VERSION 3.16)
project(Spreadsheet)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_PREFIX_PATH "/usr/local/Cellar/qt/5.12.3/lib/cmake/")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
find_package(Qt5Widgets)
add_subdirectory(test)
set(SOURCE_FILES Model.cpp Model.h Sum.cpp Sum.h Result.cpp Result.h Window.cpp Window.h Mean.cpp Mean.h ValuesManagement.cpp ValuesManagement.h)
add_executable(Spreadsheet main.cpp)
add_library(core ${SOURCE_FILES})
target_link_libraries(core Qt5::Widgets)
target_link_libraries(Spreadsheet core)

