add_subdirectory(./lib/googletest-master)
set(gtest_SOURCE_DIR, ./lib/googletest-master)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(TEST_SOURCE_FILES RunAllTests.cpp ModelTests.cpp SumTests.cpp)
add_executable(RunAllTests ${TEST_SOURCE_FILES})
target_link_libraries(RunAllTests gtest gtest_main core)